@@ -215,6 +215,7 @@
                     <!-- exclude tags -->
                     <!--suppress UnresolvedMavenProperty -->
                     <excludedGroups>${excludedGroups}</excludedGroups>
+                    <argLine>-Djdk.attach.allowAttachSelf=true</argLine>
                     <threadCount>1</threadCount>
                 </configuration>
             </plugin>
